--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 streamlit
 opencv-python
 numpy
-tensorflow==2.15.1
-keras
+tensorflow==2.19.0
+keras==3.1.0
 mediapipe==0.10.21
 joblib==1.5.1
 pillow
